[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ACHist"
version = "0.0.1"
authors = [
  { name="Alex Lee Conley", email="imaconley1@gmail.com" },
]
description = "1D and 2D histogram tools for polar dataframes using matplotlib and numpy"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alconley/ACHist"
"Bug Tracker" = "https://github.com/alconley/ACHist/issues"